kubernetes/cluster-gateway/gateway-cluster.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cluster-gateway
  namespace: envoy-gateway-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    metallb.io/loadBalancerIPs: "192.168.15.1"
spec:
  gatewayClassName: envoy-gateway-class
  listeners:
    - name: http
      protocol: HTTP
      port: 80
    - name: https
      protocol: HTTPS
      hostname: "*.k8s.weinbender.io"
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: gateway-wildcard-tls
            group: ""
